# memo-app

./: README.md
memo-back/: app.py  pyproject.toml
memo-back/data/: insert_data.json  insert_many_data.json
memo-back/db/: db_connection.py
memo-back/routers/: connections.py
